@@ -12,4 +12,5 @@ in
   rofi-wallpaper-switcher = import ./rofi-wallpaper-switcher.nix { inherit pkgs config; };
   take-screenshot-wayland = import ./take-screenshot-wayland.nix { inherit pkgs getExe; };
   take-screenshot-xorg = import ./take-screenshot-xorg.nix { inherit pkgs getExe; };
+  idle-daemon-event-handler = import ./idle-daemon-event-handler.nix { inherit pkgs; };
 }
